src/regression/parse_pool/libtest1.sfp.out

sfc in program: parse_pool/libtest1.sfl
syntax error at line 2, position 1:
application blink $(FENNEC_FOX_LIB)/Application/SimpleBlink
^
